# dedupe-algo

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  requirements.md  stories.md  vite.config.ts
.github/workflows/: build-main.yml  create-tag.yml  release.yml
docs/: conversation.md  speak-listen.md
scripts/: download_model.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build_jarvis.sh  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/binaries/: jarvis-x86_64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/jarvis/: Cargo.toml
src-tauri/jarvis/src/: audio.rs  config.rs  main.rs  state_machine.rs  transcript.rs
src-tauri/src/: cache.rs  lib.rs  main.rs  scanner.rs
src/components/: DeleteConfirmation.tsx  FileExplorerView.tsx  OnboardingWizard.tsx  ResultsView.tsx  ScanQueueView.tsx  Sidebar.tsx  SidebarItem.tsx  SpeakToAetherView.tsx  SpeakToJarvisView.tsx
src/components/ui/: checkbox.tsx  sonner.tsx
src/components/views/: CategoryResultsView.tsx  ClusterResultsView.tsx  FolderResultsView.tsx
src/config/: agentLLMConfig.ts  jarvisConfig.ts  llmConfig.ts
src/constants/: LLMS.ts
src/hooks/: useAgentConversation.ts  useAgentExecutor.ts  useDrives.ts  useTextConversationAgent.ts  useVoiceConversationAgent.ts
src/lib/: dataTransform.ts  utils.ts
src/services/: jarvisService.ts  llmService.ts  ttsService.ts
src/services/agent/: AgentOrchestrator.ts  ToolRegistry.ts
src/services/agent/context/: ContextService.ts
src/store/: useStore.ts
(+3 files in other folders)
