[workspace]
members = ["jarvis"]
exclude = ["gen"]

[package]
name = "dedupe-algo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dedupe_algo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
rayon = "1.8"
jwalk = "0.8"
blake3 = "1.5"
sysinfo = "0.30"
rusqlite = { version = "0.30", features = ["bundled"] }
trash = "3.1"
xattr = "1.1"
tauri-plugin-shell = "2.3.4"

