[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
cpal = "0.15"
ringbuf = "0.3"
rubato = "0.14"
hound = "3.5"
whisper-rs = { version = "0.13.0", features = ["coreml"] } # CoreML for macOS perf optimisation
anyhow = "1.0"
crossbeam-channel = "0.5"
